PR-8 feat: implement skeleton loading and fix some issue in the drag and drop feature
